<resources>
    <string name="app_name">Calculator</string>
    <string name="divide">÷</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="multiply">x</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="minus">-</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="plus">+</string>
    <string name="backspace">back</string>
    <string name="tripeZero">000</string>
    <string name="zero">0</string>
    <string name="enter_amount">Jumlah Uang</string>
    <string name="hint_amount">0</string>
    <string name="separator">separator</string>
    <string name="textview">TextView</string>
    <string name="rp">Rp</string>
    <string name="amount_background">amount background</string>
    <string name="confirm_button">OK</string>
</resources>
